syntax = "proto3";

import "Text.proto";
import "DataFrame.proto";
import "Chart.proto";
import "Image.proto";
import "Progress.proto";
import "DocString.proto";
import "Exception.proto";
import "Empty.proto";

// An element which can be displayed on the screen.
message Element {

  // An element can be one of the following element types.
  oneof type {
    DataFrame data_frame = 2;
    Chart chart = 3;
    ImageList imgs = 4;
    Progress progress = 5;
    Text text = 6;
    DocString doc_string = 7;
    Exception exception = 8;
    Empty empty = 9;
  }
}
